; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/mediatek/files-4.19/drivers/net/phy/mtk/mt753x/extr_mt753x_mdio.c_mt753x_mii_write.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/mediatek/files-4.19/drivers/net/phy/mtk/mt753x/extr_mt753x_mdio.c_mt753x_mii_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gsw_mt753x = type { i32, i32 }

@MT753X_NUM_PHYS = common dso_local global i32 0, align 4
@MT753X_SMI_ADDR_MASK = common dso_local global i32 0, align 4
@MDIO_CMD_WRITE = common dso_local global i32 0, align 4
@MDIO_ST_C22 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mt753x_mii_write(%struct.gsw_mt753x* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.gsw_mt753x*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.gsw_mt753x* %0, %struct.gsw_mt753x** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* @MT753X_NUM_PHYS, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %20

12:                                               ; preds = %4
  %13 = load %struct.gsw_mt753x*, %struct.gsw_mt753x** %5, align 8
  %14 = getelementptr inbounds %struct.gsw_mt753x, %struct.gsw_mt753x* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* %6, align 4
  %17 = add nsw i32 %15, %16
  %18 = load i32, i32* @MT753X_SMI_ADDR_MASK, align 4
  %19 = and i32 %17, %18
  store i32 %19, i32* %6, align 4
  br label %20

20:                                               ; preds = %12, %4
  %21 = load %struct.gsw_mt753x*, %struct.gsw_mt753x** %5, align 8
  %22 = getelementptr inbounds %struct.gsw_mt753x, %struct.gsw_mt753x* %21, i32 0, i32 1
  %23 = call i32 @mutex_lock(i32* %22)
  %24 = load %struct.gsw_mt753x*, %struct.gsw_mt753x** %5, align 8
  %25 = load i32, i32* %6, align 4
  %26 = load i32, i32* %7, align 4
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* @MDIO_CMD_WRITE, align 4
  %29 = load i32, i32* @MDIO_ST_C22, align 4
  %30 = call i32 @mt753x_mii_rw(%struct.gsw_mt753x* %24, i32 %25, i32 %26, i32 %27, i32 %28, i32 %29)
  %31 = load %struct.gsw_mt753x*, %struct.gsw_mt753x** %5, align 8
  %32 = getelementptr inbounds %struct.gsw_mt753x, %struct.gsw_mt753x* %31, i32 0, i32 1
  %33 = call i32 @mutex_unlock(i32* %32)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mt753x_mii_rw(%struct.gsw_mt753x*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
